# akn-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  REPO_CONTENTS.md  SECURITY.md  sync_from_monorepo.sh
docs/: examples-index.md
examples/external-agent-google-adk-starter/: README.md  main.py  requirements.txt  sample_agent.py
examples/external-agent-langgraph-starter/: README.md  env.example  main.py  requirements.txt  sample_agent.py
examples/external-agent-starter/: README.md  env.example  main.py  sample_agent.py
examples/external-agent-strands-starter/: README.md  main.py  requirements.txt  sample_agent.py
python/: README.md  pyproject.toml
python/akn_sdk/: __init__.py  akneventsclient.py  aknsychclient.py  config.py  exceptions.py  node.py  version.py
python/akn_sdk/actions/: dispute.py  query.py  register.py  response.py  subscribe.py  validation.py
python/akn_sdk/identity/: key_manager.py  wallet.py
python/akn_sdk/models/: events.py
python/akn_sdk/protocol/: compatibility.py  envelope.py  signer.py  verifier.py
python/akn_sdk/runtime/: dispatcher.py
python/akn_sdk/transport/: http_client.py  ws_client.py
python/scripts/: release_pypi.sh
