[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akn-sdk"
version = "0.1.0"
description = "Python SDK for Agent Knowledge Network (AKN)"
authors = [{name = "AKN"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["akn", "agent", "sdk", "multi-agent", "network-reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "requests>=2.31.0",
    "websockets>=12.0",
    "pynacl>=1.5.0",
    "jsonschema>=4.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://akn.one"
Documentation = "https://akn.one/docs/v1"

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "twine>=5.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["akn_sdk*"]
